Add Google site verification meta tag
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La page web de GBOLOU Taye Ivon</title>
+    <meta name="google-site-verification" content="xYxEwrgu3e5MX2I_-KpvaOezpaFrh-6T3nS5DzAz1aY" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -113,4 +114,5 @@ But : renforcer la présence en ligne, augmenter l’engagement et construire un
     </script>
     
 </body>
+
 </html>
