--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="portfolio officielde GBOLOU Taye Ivon, developpeur web et data analyst, spécialisé en Python, HTML, CSS, Excel,Javascriptet tout autre langage et technologie de programmation">
     <title>La page web de GBOLOU Taye Ivon</title>
     <meta name="google-site-verification" content="xYxEwrgu3e5MX2I_-KpvaOezpaFrh-6T3nS5DzAz1aY" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1 class = "main-title"> Taye Ivon GBOLOU Développeur Web</h1>
+        <h1 class = "main-title"> Taye Ivon GBOLOU Développeur Web & Data Analyst</h1>
     </header>
     <section class = "welcome">
         <h3 class="slogant"><i>« Construire aujourd’hui les solutions numériques de demain.»</i></h3>
@@ -116,3 +116,4 @@ But : renforcer la présence en ligne, augmenter l’engagement et construire un
 </body>
 
 </html>
+
