--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="portfolio officielde GBOLOU Taye Ivon, developpeur web et data analyst, spécialisé en Python, HTML, CSS, Excel,Javascriptet tout autre langage et technologie de programmation">
-    <title>La page web de GBOLOU Taye Ivon</title>
+    <title>La page web de GBOLOU Taye Ivon Développeur Web & Data Analyst</title>
     <meta name="google-site-verification" content="xYxEwrgu3e5MX2I_-KpvaOezpaFrh-6T3nS5DzAz1aY" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -116,4 +116,5 @@ But : renforcer la présence en ligne, augmenter l’engagement et construire un
 </body>
 
 </html>
+
 
