Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ But : renforcer la présence en ligne, augmenter l’engagement et construire un
                     </a>
                     <br>
                     <label for="mon-email">Email📧:</label>
-                    <a href="email:filsgbolou@gmail.com" class="mon-email">
+                    <a href="mailto:filsgbolou@gmail.com" class="mon-email">
                         <i class="mon-email">filsgbolou@gmail.com</i>
                     </a>
                   <hr>
@@ -116,5 +116,6 @@ But : renforcer la présence en ligne, augmenter l’engagement et construire un
 </body>
 
 </html>
+
 
 
