Refactor HTML structure and add viewport meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="portfolio officielde GBOLOU Taye Ivon, developpeur web et data analyst, spécialisé en Python, HTML, CSS, Excel,Javascriptet tout autre langage et technologie de programmation">
     <title>La page web de GBOLOU Taye Ivon Développeur Web & Data Analyst</title>
     <meta name="google-site-verification" content="xYxEwrgu3e5MX2I_-KpvaOezpaFrh-6T3nS5DzAz1aY" />
@@ -116,6 +117,7 @@ But : renforcer la présence en ligne, augmenter l’engagement et construire un
 </body>
 
 </html>
+
 
 
 
